--- a/examples/simple_module/package.json
+++ b/examples/simple_module/package.json
@@ -10,7 +10,7 @@
         "node": ">= 0.6.0"
     },
     "knot": {
-        "client": [
+        "modules": [
             "lib/increment",
             "lib/math"
         ]
