--- a/lib/middleware/modules/package.json
+++ b/lib/middleware/modules/package.json
@@ -13,7 +13,9 @@
         "modules": [
             "knot",
             "path",
-            "util"
+            "util",
+            "console",
+            "assert"
         ]
     }
 }
