--- a/lib/middleware/modules/package.json
+++ b/lib/middleware/modules/package.json
@@ -14,6 +14,8 @@
             "knot",
             "path",
             "util",
+            "events",
+            "stream",
             "console",
             "assert"
         ]
