Changed knot.js to process.js

--- a/lib/middleware/modules/package.json
+++ b/lib/middleware/modules/package.json
@@ -11,7 +11,7 @@
     },
     "knot": {
         "modules": [
-            "knot",
+            "process",
             "console",
             "util",
             "events",
