--- a/lib/middleware/modules/package.json
+++ b/lib/middleware/modules/package.json
@@ -17,7 +17,10 @@
             "events",
             "stream",
             "path",
-            "assert"
+            "assert",
+            "url",
+            "punycode",
+            "querystring"
         ]
     }
 }
