Added code to async file loading. Still needs tests so the trigger line is commented out.

--- a/lib/middleware/modules/package.json
+++ b/lib/middleware/modules/package.json
@@ -15,12 +15,12 @@
             "console",
             "util",
             "events",
-            "stream",
             "path",
             "assert",
             "url",
             "punycode",
-            "querystring"
+            "querystring",
+            "dummy"
         ]
     }
 }
