--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "knot",
     "description": "A client side Node experiment.",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "author": {
         "name": "Richard S Allinson",
         "email": "rsa@mounitainmansoftware.com"
     },
     "main": "index",
     "engines": {
-        "node": ">= 0.6.0 < 0.7.0"
+        "node": ">= 0.6.0 <= 0.7.x"
     },
     "dependencies": {
         "connect": "1.x",
