--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "main": "index",
     "engines": {
-        "node": ">= 0.6.0 <= 0.7.x"
+        "node": ">= 0.6.0 < 0.8.0"
     },
     "dependencies": {
         "connect": "1.x",
