--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "engines": {
         "node": ">= 0.6.0 < 0.8.0"
     },
+    "scripts": {
+        "test": "mocha --recursive ./tests"
+    },
     "dependencies": {
         "connect": "1.x",
         "uglify-js": "1.3.x"
+    },
+    "devDependencies": {
+        "mocha": ">=1.3.x"
     },
     "repository": {
         "type": "git",
