--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "node": ">= 0.6.0 < 0.8.0"
     },
     "scripts": {
-        "test": "mocha --recursive ./tests"
+        "test": "mocha --recursive ./tests/app/node_module_tests"
     },
     "dependencies": {
         "uglify-js": "1.3.x"
